Added more tests to UserProfileControllerTest
Additional example tests include:
viewing other users' posts when they have no posts
viewing own posts when we have no posts